# four-hub

./: .gitignore  Cargo.toml  HELP.txt  README.md  build.rs  config.toml  hubinstall.sh  install.sh  tools.toml
c/: packet_capture.c  packet_capture.h
python/: plugin_api.py
python/plugins/: example_plugin.py
python/wrappers/: __init__.py  aircrack_wrapper.py  crackmapexec_wrapper.py  dirb_wrapper.py  dnsenum_wrapper.py  enum4linux_wrapper.py  eyewitness_wrapper.py  ffuf_wrapper.py  gobuster_wrapper.py  hashcat_wrapper.py  hydra_wrapper.py  john_wrapper.py  metasploit_wrapper.py  nikto_wrapper.py  nmap_wrapper.py  nuclei_wrapper.py  smbclient_wrapper.py  sqlmap_wrapper.py  theharvester_wrapper.py  wifite_wrapper.py  wpscan_wrapper.py
src/: app.rs  config.rs  lib.rs  main.rs  pcap_ffi.rs
src/crypto/: mod.rs  vault.rs
src/db/: mod.rs  schema.rs
src/plugins/: mod.rs  runtime.rs
src/reporting/: html.rs  json.rs  mod.rs
src/stealth/: anti_forensics.rs  identity.rs  memory.rs  mod.rs  network.rs  ops.rs
src/tools/: executor.rs  mod.rs  parser.rs  registry.rs  spec.rs  workflow.rs
src/tools/null/: gobuster.rs  hydra.rs  mod.rs  nikto.rs  nmap.rs  subfinder.rs
src/tui/: app_state.rs  events.rs  layout.rs  mod.rs  renderer.rs  theme.rs
src/tui/widgets/: dashboard.rs  inspector.rs  launcher.rs  mod.rs  terminal.rs  wordlists.rs  workspace.rs
tests/: test_crypto.rs  test_db.rs  test_tools.rs
