[package]
name        = "four-hub"
version     = "1.0.0"
edition     = "2021"
authors     = ["Four-Hub Team"]
description = "The ultimate penetration-testing unified command centre"
license     = "MIT"
build       = "build.rs"

[[bin]]
name = "four-hub"
path = "src/main.rs"

# ── async runtime ─────────────────────────────────────────────────────────────
[dependencies]
tokio          = { version = "1.36",  features = ["full"] }
tokio-util     = { version = "0.7",   features = ["full"] }

# ── TUI ───────────────────────────────────────────────────────────────────────
ratatui        = { version = "0.26",  features = ["all-widgets"] }
crossterm      = { version = "0.27",  features = ["event-stream"] }

# ── serialization ─────────────────────────────────────────────────────────────
serde          = { version = "1",     features = ["derive"] }
serde_json     = "1"
toml           = "0.8"

# ── crypto ────────────────────────────────────────────────────────────────────
aes-gcm        = "0.10"
argon2         = "0.5"
rand           = "0.8"
zeroize        = { version = "1.7",   features = ["derive"] }
hex            = "0.4"
sha2           = "0.10"

# ── database ──────────────────────────────────────────────────────────────────
rusqlite       = { version = "0.31",  features = ["bundled"] }

# ── logging ───────────────────────────────────────────────────────────────────
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender   = "0.2"

# ── process / system ──────────────────────────────────────────────────────────
nix            = { version = "0.28",  features = ["process", "mman", "signal"] }
libc           = "0.2"
which          = "6"
sysinfo        = "0.30"

# ── async channels / streams ──────────────────────────────────────────────────
flume          = "0.11"
async-trait    = "0.1"

# ── Python interop ────────────────────────────────────────────────────────────
pyo3           = { version = "0.23",  features = ["auto-initialize"] }

# ── HTTP / REST API ───────────────────────────────────────────────────────────
axum           = { version = "0.7",   features = ["json"] }
tower          = "0.4"
tower-http     = { version = "0.5",   features = ["cors", "trace"] }
hyper          = { version = "1",     features = ["full"] }

# ── other ─────────────────────────────────────────────────────────────────────
anyhow         = "1"
thiserror      = "1"
chrono         = { version = "0.4",   features = ["serde"] }
uuid           = { version = "1",     features = ["v4"] }
base64         = "0.22"
regex          = "1"
once_cell      = "1"
parking_lot    = "0.12"
dashmap        = "5"
indexmap       = { version = "2",     features = ["serde"] }
dirs           = "5"
urlencoding    = "2"
humantime      = "2"
rpassword      = "7"
futures-util   = { version = "0.3", features = ["compat"] }

[build-dependencies]
cc             = "1"

[dev-dependencies]
tempfile       = "3"
tokio          = { version = "1.36", features = ["full", "test-util"] }

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = true
